--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.32.0
-langchain==0.1.13
-langchain-openai==0.0.8
-langchain-groq==0.0.3
-langchain-pinecone==0.0.3
-pinecone-client==3.0.3
-PyPDF2==3.0.1
-pdf2image==1.17.0
-Pillow==10.2.0
-python-dotenv==1.0.1
-openai==1.12.0
-groq==0.4.2
+streamlit>=1.32.0
+langchain>=0.1.0
+langchain-openai>=0.1.0
+langchain-groq>=0.1.0
+langchain-pinecone>=0.1.0
+pinecone-client>=3.0.0
+PyPDF2>=3.0.0
+pdf2image>=1.17.0
+Pillow>=10.0.0
+python-dotenv>=1.0.0
+openai>=1.0.0
+groq>=0.4.0
