--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,33 @@
-streamlit>=1.32.0
-langchain>=0.1.0
-langchain-openai>=0.1.0
-langchain-groq>=0.1.0
-langchain-pinecone>=0.1.0
-pinecone-client>=3.0.0
-PyPDF2>=3.0.0
+# Core Streamlit and UI
+streamlit>=1.39.0
+streamlit-chat>=0.1.1
+
+# LangChain ecosystem (latest versions)
+langchain>=0.3.0
+langchain-openai>=0.2.0
+langchain-groq>=0.2.0
+langchain-pinecone>=0.2.0
+langchain-community>=0.3.0
+
+# Vector database
+pinecone-client>=5.0.0
+
+# PDF processing
+PyPDF2>=3.0.1
 pdf2image>=1.17.0
-Pillow>=10.0.0
-python-dotenv>=1.0.0
-openai>=1.0.0
-groq>=0.4.0
+Pillow>=10.4.0
+
+# AI models and APIs
+openai>=1.54.0
+groq>=0.12.0
+
+# Utilities
+python-dotenv>=1.0.1
+typing-extensions>=4.12.2
+
+# Optional performance improvements
+watchdog>=4.0.2
+
+# For development/testing
+pytest>=8.0.0
+black>=24.0.0
