--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,49 @@
-# ===== requirements.txt (Updated for Enhanced PDF Processing) =====
-
+# ===== requirements.txt =====
 # Core framework
 streamlit>=1.39.0
 
-# Enhanced PDF processing libraries
-PyMuPDF>=1.24.0  # Basic text extraction
-pdfplumber>=0.11.0  # Table extraction (best for structured tables)
-pandas>=2.0.0  # Table formatting and manipulation
+# Enhanced PDF processing with multimodal support
+unstructured[all-docs]>=0.11.0    # Comprehensive PDF processing
+pillow>=10.4.0                    # Image processing
+lxml>=4.9.0                       # XML parsing for unstructured
 
-# Advanced OCR for images
-paddleocr>=2.7.0  # Best for structured image text extraction
-opencv-python>=4.8.0  # Required for PaddleOCR
-easyocr>=1.7.0  # Fallback OCR option
-
-# Alternative table extraction (optional, install if needed)
-# camelot-py[cv]>=0.11.0  # Alternative table extraction
-# tabula-py>=2.9.0  # Java-based table extraction
-
-# Local vector processing
+# Core AI libraries
 langchain>=0.3.0
 langchain-community>=0.3.0
+langchain-core>=0.3.0
 langchain-huggingface>=0.1.0
-faiss-cpu>=1.8.0
 
-# Groq LLM support
-langchain-groq>=0.1.0
+# LLM and Vision API integrations
+langchain-groq>=0.1.0             # Fast text generation
+langchain-google-genai>=2.0.0     # Google Gemini vision (preferred)
+langchain-openai>=0.2.0           # OpenAI GPT-4V fallback
 groq>=0.9.0
 
-# Image processing
-Pillow>=10.4.0
+# Local vector processing
+faiss-cpu>=1.8.0                  # Vector database
+sentence-transformers>=3.0.0      # Embeddings
 
-# Legacy OCR models (existing)
+# Core ML libraries  
 transformers>=4.45.0
 torch>=2.1.0
 torchvision>=0.16.0
+accelerate>=0.34.0
 
-# Utilities
-python-dotenv>=1.0.1
+# Data processing
+pandas>=2.0.0                     # Table manipulation
 numpy>=1.24.0
 
-# Optional: For better performance
-accelerate>=0.34.0
-sentence-transformers>=3.0.0
+# System utilities
+python-dotenv>=1.0.1             # Environment variables
+pathlib>=1.0.0                   # Path handling
+uuid>=1.0.0                      # Document ID generation
+
+# Optional: Alternative OCR libraries (kept for compatibility)
+# paddleocr>=2.7.0                # Alternative OCR
+# opencv-python>=4.8.0            # Computer vision
+# easyocr>=1.7.0                  # Alternative OCR
+
+# System dependencies (install via system package manager):
+# macOS: brew install poppler tesseract libmagic
+# Ubuntu: apt-get install poppler-utils tesseract-ocr libmagic-dev
+# Windows: see https://github.com/Unstructured-IO/unstructured for setup guide
