--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 # ===== requirements.txt =====
-# Core framework
+# Multimodal RAG Chatbot Dependencies
+# Updated for macOS compatibility
+
+# Core Web Framework
 streamlit>=1.39.0
 
 # Enhanced PDF processing with multimodal support
 unstructured[all-docs]>=0.11.0    # Comprehensive PDF processing
 pillow>=10.4.0                    # Image processing
 lxml>=4.9.0                       # XML parsing for unstructured
+pypdf2>=3.0.0                     # PDF reading
+pdfplumber>=0.9.0                 # PDF table extraction
 
-# Core AI libraries
+# Core AI & LangChain libraries
 langchain>=0.3.0
 langchain-community>=0.3.0
 langchain-core>=0.3.0
@@ -18,32 +23,58 @@ langchain-groq>=0.1.0             # Fast text generation
 langchain-google-genai>=2.0.0     # Google Gemini vision (preferred)
 langchain-openai>=0.2.0           # OpenAI GPT-4V fallback
 groq>=0.9.0
+google-generativeai>=0.3.0        # Google Gemini API
+openai>=1.0.0                     # OpenAI API
 
 # Local vector processing
-faiss-cpu>=1.8.0                  # Vector database
+faiss-cpu>=1.8.0                  # Vector database (CPU version for macOS)
 sentence-transformers>=3.0.0      # Embeddings
 
-# Core ML libraries  
-transformers>=4.45.0
-torch>=2.1.0
-torchvision>=0.16.0
-accelerate>=0.34.0
+# # Core ML libraries  
+# transformers>=4.45.0
+# torch>=2.1.0                      # PyTorch for macOS
+# torchvision>=0.16.0
+# accelerate>=0.34.0
+# safetensors>=0.4.0                # Safe tensor format
 
-# Data processing
-pandas>=2.0.0                     # Table manipulation
-numpy>=1.24.0
+# # Data processing
+# pandas>=2.0.0                     # Table manipulation
+# numpy>=1.24.0                     # Numerical computing
+# openpyxl>=3.1.0                   # Excel file support
+# xlsxwriter>=3.1.0                 # Excel writing
+
+# # Image processing and OCR
+# opencv-python>=4.8.0              # Computer vision
+# easyocr>=1.7.0                    # OCR capabilities
+# pytesseract>=0.3.10               # Tesseract OCR wrapper
 
 # System utilities
-python-dotenv>=1.0.1             # Environment variables
-pathlib>=1.0.0                   # Path handling
-uuid>=1.0.0                      # Document ID generation
+python-dotenv>=1.0.1              # Environment variables
+pathlib>=1.0.0                    # Path handling (built-in but explicit)
+uuid>=1.0.0                       # Document ID generation (built-in but explicit)
+typing-extensions>=4.8.0          # Type hints
+requests>=2.31.0                  # HTTP requests
+urllib3>=2.0.0                    # URL handling
 
-# Optional: Alternative OCR libraries (kept for compatibility)
-# paddleocr>=2.7.0                # Alternative OCR
-# opencv-python>=4.8.0            # Computer vision
-# easyocr>=1.7.0                  # Alternative OCR
+# File format support
+python-magic>=0.4.27              # File type detection
+charset-normalizer>=3.3.0         # Character encoding detection
 
-# System dependencies (install via system package manager):
-# macOS: brew install poppler tesseract libmagic
-# Ubuntu: apt-get install poppler-utils tesseract-ocr libmagic-dev
-# Windows: see https://github.com/Unstructured-IO/unstructured for setup guide
+# Async support
+aiofiles>=23.0.0                  # Async file operations
+asyncio>=3.4.3                    # Async programming (built-in but explicit)
+
+# # Progress bars and UI
+# tqdm>=4.66.0                      # Progress bars
+# rich>=13.0.0                      # Rich text and beautiful formatting
+
+# Development and debugging
+loguru>=0.7.0                     # Enhanced logging
+psutil>=5.9.0                     # System monitoring
+
+# # Optional but recommended for performance
+# numba>=0.58.0                     # JIT compilation for NumPy
+# scikit-learn>=1.3.0               # Machine learning utilities
+
+# System dependencies to install separately on macOS:
+# brew install poppler tesseract libmagic pkg-config
